Fix /rapid group header center-align losing to fileTable th specificity

--- a/webapp/app/globals.css
+++ b/webapp/app/globals.css
@@ -1062,7 +1062,7 @@ button:disabled {
   width: min(100%, 320px);
 }
 
-.rapidGroupHeader {
+.rapidTable .rapidGroupHeader {
   text-align: center;
 }
 
